fixed font sizes and spacing

--- a/static/public/css/mine.css
+++ b/static/public/css/mine.css
@@ -14,7 +14,7 @@ body {
 }
 
 #logo {
-  height: 400px;
+  height: 250px;
   width: 100%;
   background-color: #42036F;
 }
@@ -26,8 +26,9 @@ body {
 }
 
 #logo img{
-  margin-left: 20%;
+  margin-left: 40%;
   margin-top: 20px;
+  width: 20%;
 }
 
 #circle {
