--- a/static/public/css/style.css
+++ b/static/public/css/style.css
@@ -199,11 +199,11 @@ h1 img {height: 60px;}
 	max-width: 640px;
 	min-width: 320px;
 	z-index: 9999;
-	text-align: center;
+	text-align: left;
 }
 @media all and (max-width: 640px) and (min-width: 320px){
 	#bottomnav{
-		text-align: center;
+		text-align: left;
 		width: 100%;
 	}
 }
@@ -222,6 +222,7 @@ h1 img {height: 60px;}
 .navicon {
   position: relative;
   top: 22px;
+  left: 15%;
   display: inline;
   padding: 30px;
   padding-top: 20px;
